Mods to include project stuff

--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -10,8 +10,10 @@
       {% load bootstrap %}
       <fieldset>
         {{ form.title|bootstrap }}
-        {{ form.internal_id|bootstrap }}
+	{{ form.project_name|bootstrap }}
         {{ form.project_id|bootstrap }}
+	{{ form.project_description|bootstrap }}
+        {{ form.internal_id|bootstrap }}
         {{ form.authors|bootstrap }}
         {{ form.institution_name|bootstrap }}
         {{ form.description|bootstrap }}
