--- a/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
@@ -27,17 +27,7 @@
             &nbsp;
           {% endfor %}
         </small>
-        <span class="pull-right">
-          {% for dltype, dlurl in exp.get_download_urls.items %}
-            {% if forloop.first %}
-              <a class="dllink" href="{{dlurl}}"
-                 title="Download Entire Experiment as {{dltype}}">
-                <i class="fa fa-download"></i>
-                <em>Download data as .{{dltype}}</em>
-              </a>
-            {% endif %}
-          {% endfor %}
-        </span>
+        {% experiment_download_link exp %}
       </div> {% comment %} class="accordion-toggle" {% endcomment %}
     </div> {% comment %} class="accordion-heading" {% endcomment %}
     <div id="collapse-{{exp.id}}"
