--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -45,17 +45,7 @@
                     {% endfor %}
                     &nbsp;
                   </small>
-                  <span class="pull-right">
-                    {% for dltype, dlurl in exp.get_download_urls.items %}
-                      {% if forloop.first %}
-                        <a class="dllink" href="{{dlurl}}"
-                           title="Download Entire Experiment as {{dltype}}">
-                          <i class="fa fa-download"></i>
-                          <em>Download data as .{{dltype}}</em>
-                        </a>
-                      {% endif %}
-                    {% endfor %}
-                  </span>
+                  {% experiment_download_link exp %}
                 </div> {% comment %}class="accordion-toggle private-experiment"{% endcomment %}
               </div> {% comment %}class="accordiong-heading"{% endcomment %}
               <div id="collapse-{{exp.id}}"
@@ -94,19 +84,7 @@
                 {% endfor %}
                 &nbsp;
               </small>
-              <span class="pull-right">
-                {% if exp.public_download_allowed %}
-                  {% for dltype, dlurl in exp.get_download_urls.items %}
-                    {% if forloop.first %}
-                      <a class="dllink" href="{{dlurl}}"
-                         title="Download Entire Experiment as {{dltype}}">
-                        <i class="fa fa-download"></i>
-                        <em>Download data as .{{dltype}}</em>
-                      </a>
-                    {% endif %}
-                  {% endfor %}
-                 {% endif %}
-              </span>
+              {% experiment_download_link exp %}
             </div> {% comment %}class="accordion-toggle public-experiment"{% endcomment %}
           </div> {% comment %}class="accordion-heading"{% endcomment %}
           <div id="collapsepub-{{exp.id}}"
