--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -52,19 +52,7 @@
                   {% endfor %}
                   &nbsp;
                 </small>
-                <span class="pull-right">
-                  {% if exp.public_download_allowed %}
-                  {% for dltype, dlurl in exp.get_download_urls.items %}
-                    {% if forloop.first %}
-                      <a class="dllink" href="{{dlurl}}"
-                         title="Download Entire Experiment as {{dltype}}">
-                        <i class="fa fa-download"></i>
-                        <em>Download data as .{{dltype}}</em>
-                      </a>
-                    {% endif %}
-                  {% endfor %}
-                  {% endif %}
-                </span>
+                {% experiment_download_link exp %}
               </div>
             </div>
             <div id="collapse{{exp.id}}"
