Avoid duplicating experiment authors markup in templates

--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -45,13 +45,7 @@
                 <strong><a class="pull-left explink"
                            href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
                 {% experiment_badges exp %}
-                <small>
-                  {% for author in exp.experimentauthor_set.all %}
-                    {% if not forloop.first %}, {% endif %}
-                    <span property="dc:author">{{ author.author }}</span>
-                  {% endfor %}
-                  &nbsp;
-                </small>
+                {% experiment_authors exp %}
                 {% experiment_download_link exp %}
               </div>
             </div>
