--- a/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
@@ -19,14 +19,7 @@
         <strong><a class="pull-left explink"
                    href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
         {% experiment_badges exp %}
-        <small>
-          {% for author in exp.experimentauthor_set.all %}
-            {% if not forloop.first %}, {% endif %}
-            <span property="dc:author">{{ author.author }}</span>
-          {% empty %}
-            &nbsp;
-          {% endfor %}
-        </small>
+        {% experiment_authors exp %}
         {% experiment_download_link exp %}
       </div> {% comment %} class="accordion-toggle" {% endcomment %}
     </div> {% comment %} class="accordion-heading" {% endcomment %}
