--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -38,13 +38,7 @@
                   <strong><a class="pull-left explink"
                              href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
                   {% experiment_badges exp %}
-                  <small>
-                    {% for author in exp.experimentauthor_set.all %}
-                      {% if not forloop.first %}, {% endif %}
-                      <span property="dc:author">{{ author.author }}</span>
-                    {% endfor %}
-                    &nbsp;
-                  </small>
+                  {% experiment_authors exp %}
                   {% experiment_download_link exp %}
                 </div> {% comment %}class="accordion-toggle private-experiment"{% endcomment %}
               </div> {% comment %}class="accordiong-heading"{% endcomment %}
@@ -77,13 +71,7 @@
               <strong><a class="pull-left explink"
                          href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
               {% experiment_badges exp %}
-              <small>
-                {% for author in exp.experimentauthor_set.all %}
-                  {% if not forloop.first %}, {% endif %}
-                  <span property="dc:author">{{ author.author }}</span>
-                {% endfor %}
-                &nbsp;
-              </small>
+              {% experiment_authors exp %}
               {% experiment_download_link exp %}
             </div> {% comment %}class="accordion-toggle public-experiment"{% endcomment %}
           </div> {% comment %}class="accordion-heading"{% endcomment %}
