--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -3,6 +3,7 @@
 {% load experimentstats %}
 {% load humanize %}
 {% load bleach_tag %}
+{% load render_bundle from webpack_loader %}
 
 {% block content %}
 
@@ -94,15 +95,5 @@
   </div>
 
 </div>
-<script type="text/javascript">
-$(function() {
-    $("#experiments .accordion-body").collapse({parent:"#experiments", toggle: true});
-    $(".explink").on("click", function(e) {
-        e.stopPropagation();
-    });
-    $(".dllink").on("click", function(e) {
-        e.stopPropagation();
-    });
-});
-</script>
+{% render_bundle 'tardis_portal_public_data' %}
 {% endblock %}
