Rename search's webpack bundle from 'app' to 'search_app' and rename search's div id from 'app' to 'search-app'.

--- a/tardis/apps/search/templates/search.html
+++ b/tardis/apps/search/templates/search.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-    <div id="app"></div>
+    <div id="search-app"></div>
     <div>
     </div>
-    {% render_bundle 'app' %}
+    {% render_bundle 'search_app' %}
 {% endblock content%}
