Fix errors identified by bootlint and add bootlint to test.sh for CI

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
@@ -16,7 +16,7 @@
              style="max-width: 260px;">
     </div>
 
-    <button class="form_submit btn btn-primary" id="group">
+    <button type="submit" class="form_submit btn btn-primary" id="group">
       <i class="fa fa-plus"></i>
       Create Group
     </button>
