--- a/tardis/tardis_portal/templates/tardis_portal/login.html
+++ b/tardis/tardis_portal/templates/tardis_portal/login.html
@@ -38,7 +38,7 @@
       <div class="form-group">
         <div class="col-md-offset-2 col-md-2">
             <button id="login-button"
-                    type="submit" class="form-control btn btn-info"
+                    type="submit" class="btn btn-info"
                     style="min-width: 80px; max-width: 200px;">
             <i class="fa fa-sign-in"></i> Log In
           </button>
