--- a/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
+++ b/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
@@ -14,7 +14,7 @@
 </div>
 <div ng-app="facilityOverview">
 {% with request|check_if_facility_manager as facility_manager %}
-<div id="content" ng-controller="FacilityController as facilityCtrl">
+<div id="content" class="container-fluid" ng-controller="FacilityController as facilityCtrl">
   {% verbatim %}
   <h2 class="pull-left" style="color:#999999" ng-cloak>{{facilityCtrl.selectedFacilityName}}</h2>
   <div class="btn-group pull-right" ng-show="facilityCtrl.showFacilitySelector()" ng-cloak>
