--- a/tardis/tardis_portal/templates/tardis_portal/my_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/my_data.html
@@ -9,9 +9,9 @@
 
 {% block content %}
 
-<div id="content">
+<div id="content" class="container-fluid">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       <h2 class="visible-xs">Experiments</h2>
       <div class="pull-right">
         {% if perms.tardis_portal.add_experiment %}
@@ -26,11 +26,11 @@
       <div class="pull-left">
         <h2 class="hidden-xm" style="text-align: center">Experiments</h2>
       </div>
-    </div>  <!-- class="col-md-9" -->
+    </div>  <!-- class="col-md-12" -->
   </div>  <!-- class="row" -->
 
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       {% if not owned_experiments %}
       <p class="alert alert-info">
         You do not have access to any private experiments.
@@ -56,7 +56,7 @@
       <br/>
       {% endif %}
 
-    </div>  <!-- class="col-md-9" -->
+    </div>  <!-- class="col-md-12" -->
   </div>  <!-- class="row" -->
 </div>  <!-- id="content" -->
 
