--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-<div id="content">
+<div id="content" class="container-fluid">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       <h2 class="visible-xs">Experiments</h2>
       <div class="pull-left">
           <h2 class="hidden-xm" style="text-align: center">Experiments</h2>
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       {% if not public_experiments %}
       <p class="alert alert-info">
         No experiments have been published yet.
