--- a/tardis/tardis_portal/templates/tardis_portal/shared.html
+++ b/tardis/tardis_portal/templates/tardis_portal/shared.html
@@ -8,9 +8,9 @@
 {% load capture %}
 
 {% block content %}
-<div id="content">
+<div id="content" class="container-fluid">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       <h2 class="visible-xs">Experiments</h2>
       <div class="pull-right">
         {% if perms.tardis_portal.add_experiment %}
@@ -24,11 +24,11 @@
       <div class="pull-left">
         <h2 class="hidden-xm" style="text-align: center">Experiments</h2>
       </div>
-    </div>  <!-- class="col-md-9" -->
+    </div>  <!-- class="col-md-12" -->
   </div>  <!-- class="row" -->
 
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       {% if not shared_experiments %}
       <p class="alert alert-info">
         You do not have access to any shared experiments.
@@ -51,7 +51,7 @@
       <div class="clearfix"></div>
       <div id="myshared" class="mydata accordion experiments"></div>
       {% endif %}
-    </div>  <!-- class="col-md-9" -->
+    </div>  <!-- class="col-md-12" -->
   </div>  <!-- class="row" -->
 </div>  <!-- id="content" -->
 
