--- a/tardis/apps/sftp/templates/sftp/index.html
+++ b/tardis/apps/sftp/templates/sftp/index.html
@@ -23,33 +23,37 @@
     <h2>SFTP access parameters</h2>
     <table class="table table-striped table-bordered">
     <thead>
-    <th>Parameter</th>
-    <th>Value</th>
+      <tr>
+        <th>Parameter</th>
+        <th>Value</th>
+      </tr>
     </thead>
-    <tr>
+    <tbody>
+      <tr>
         <td>Host</td>
         <td>{{ sftp_host }}</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Port</td>
         <td>{{ sftp_port }}</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Username</td>
         <td>{{ sftp_username }}</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Password</td>
         <td><i>Leave this blank</i></td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>SSH Private Key</td>
         <td>Specify the path to your SSH private key.</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>Start folder</td>
         <td>{{ sftp_start_dir }}</td>
-    </tr>
+      </tr>
+    </tbody>
     </table>
 
         <h2>Cyberduck example</h2>
@@ -59,7 +63,8 @@
         <p>Hit "Open Connection" and enter your details (Start folder is under
             'More Options')<br/>
             Make sure the top dropdown menu reads SFTP<br/>
-            <img src="{% url "tardis.apps.sftp:cyberduck_connection_window" %}" />
+            <img src="{% url "tardis.apps.sftp:cyberduck_connection_window" %}"
+	         alt="Cyberduck connection window"/>
         </p>
 {#        <h2>SSHFS on Linux</h2>#}
 
