--- a/tardis/apps/sftp/templates/sftp/keys.html
+++ b/tardis/apps/sftp/templates/sftp/keys.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-default" data-dismiss="modal" onclick="sftp.clearKeyGenerateForm()">Close</a>
+        <button class="btn btn-default" data-dismiss="modal" onclick="sftp.clearKeyGenerateForm()">Close</button>
       </div>
     </div>  <!-- class="modal-content" -->
   </div>  <!-- class="modal-dialog" -->
