--- a/tardis/tardis_portal/templates/tardis_portal/ajax/share.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/share.html
@@ -114,7 +114,7 @@
     <h3>Sharing</h3>
     <h4>Users</h4>
     <p>Users who have a share in this experiment:</p>
-    <div id="experiment_user_list"/>
+    <div id="experiment_user_list"></div>
     {% if is_owner or is_superuser %}
     <a class="share_link btn btn-default btn-xs" title="Change">
         <i class="fa fa-share"></i>
@@ -124,7 +124,7 @@
     <br/><br/>
     <h4>Groups</h4>
     <p>Groups who have a share in this experiment:</p>
-    <div id="experiment_group_list"/>
+    <div id="experiment_group_list"></div>
     {% if is_owner or is_superuser %}
     <a class="share_link_group btn btn-default btn-xs" title="Change">
         <i class="fa fa-share"></i>
@@ -149,7 +149,7 @@
     {% if has_download_permissions %}
     <br/>
     <p>Temporary access links provide full access to recipients regardless of an experiment's public status.</p>
-    <div id="experiment_token_list"/>
+    <div id="experiment_token_list"></div>
 
         {% if is_owner or is_superuser %}
         <a title="Create New Temporary Link"
@@ -161,6 +161,6 @@
         {% endif %}
     {% endif %}
     </div>
-    </div>
+</div>
 
 {% endblock %}
