--- a/tardis/tardis_portal/templates/tardis_portal/login.html
+++ b/tardis/tardis_portal/templates/tardis_portal/login.html
@@ -8,7 +8,7 @@
 
     <p> User authentication on this system is managed by the Australian Access Federation. Click the blue button below to log in. </p>
     <br><br>
-    <p><img src="https://rapid.aaf.edu.au/aaf_service_223x54.png"> </p>
+    <p><img src="https://rapid.aaf.edu.au/aaf_service_223x54.png" alt="AAF Rapid Connect"> </p>
     <br><br>
     <p> <a href={{ RAPID_CONNECT_LOGIN_URL }} class="btn btn-lg btn-info">LOGIN VIA THE AUSTRALIAN ACCESS FEDERATION</a> </p>
 
