--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -179,7 +179,7 @@
 </div>
 
 <div class="row" >
-  <div class="col-md-7">
+  <div class="col-md-6">
     {% block dataset_content_preview %}
     {% if dataset.get_images.exists %}
     <div style="margin-bottom: 20px">
@@ -262,9 +262,9 @@
         {% endif %}
       </div>  <!-- class="info-box" -->
     </div>  <!-- "other-experiments-pane" -->
-  </div>  <!-- class="col-md-8" -->
+  </div>  <!-- class="col-md-6" -->
 
-  <div class="col-md-5"> {# side bar #}
+  <div class="col-md-6"> {# datafiles pane #}
   <div class="row">
     <div class="col-md-8">
       <h3 id="total-count" style="display: inline">
