--- a/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
@@ -1,4 +1,5 @@
 {% extends "tardis_portal/portal_template.html" %}
+{% load render_bundle from webpack_loader %}
 
 {% load bootstrap %}
 
@@ -40,4 +41,5 @@
     </form>
   </div>
 </div>
+{% render_bundle 'tardis_portal_add_or_edit_dataset' %}
 {% endblock %}
