--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -1,4 +1,5 @@
 {% extends "tardis_portal/portal_template.html" %}
+{% load render_bundle from webpack_loader %}
 
 {% block content %}
   <div class="page-header">
@@ -37,4 +38,5 @@
       </form>
     </div>
   </div>
+  {% render_bundle 'tardis_portal_create_experiment' %}
 {% endblock %}
