--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -3,7 +3,6 @@
 {% load experimentstats %}
 {% load humanize %}
 {% load bleach_tag %}
-{% load render_bundle from webpack_loader %}
 
 {% block content %}
 
@@ -12,7 +11,7 @@
     <div class="col-md-12">
       <h2 class="d-block d-sm-none">Experiments</h2>
       <div class="pull-left">
-          <h2 class="d-none d-sm-block" style="text-align: center">Experiments</h2>
+          <h2 class="hidden-xm" style="text-align: center">Experiments</h2>
       </div>
     </div>
   </div>
@@ -37,94 +36,107 @@
         Expand all</button>
       </div>
       <div class="clearfix"></div>
-      <div id="public-experiments" class="accordion experiments">
+      <div id="public-experiments" class="panel-group experiments">
         {% for exp in public_experiments %}
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <div class="accordion-toggle" data-toggle="collapse"
-                   onclick="$('#collapse{{exp.id}}').collapse('toggle');" >
-                <strong><a class="pull-left"
-                           href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-                <ul class="nav nav-pills badgelist">
-                  <li class="ml-auto mr-2">
-                    {{ exp|experiment_public_access_badge }}
-                  </li>
-                  <li class="mr-2">
-                    {{ exp|experiment_datafiles_badge }}
-                  </li>
-                  <li class="mr-2">
-                    {{ exp|experiment_datasets_badge }}
-                  </li>
-                  <li>
-                    {{ exp|experiment_last_updated_badge }}
-                  </li>
-                </ul>
-                <small>
-                  {% for author in exp.experimentauthor_set.all %}
-                    {% if not forloop.first %}, {% endif %}
-                    <span property="dc:author">{{ author.author }}</span>
-                  {% endfor %}
-                  &nbsp;
-                </small>
-                <span class="pull-right">
-                  {% if exp.public_download_allowed %}
-                  {% for dltype, dlurl in exp.get_download_urls.items %}
-                    {% if forloop.first %}
-                      <a class="dllink" href="{{dlurl}}"
-                         title="Download Entire Experiment as {{dltype}}">
-                        <i class="fa fa-download"></i>
-                        <em>Download data as .{{dltype}}</em>
+          <div class="card border-0" style="background-color: #f5fbff">
+              <div class="card-header border-bottom-0" style="background-color: rgba(0, 0, 0, 0);" data-parent="#private-experiments">
+                <div class="row">
+                  <div class="accordion-toggle col-8" data-toggle="collapse"
+                       onclick="$('#collapse{{exp.id}}').collapse('toggle');" >
+                    <strong>
+                      <a class="pull-left explink"
+                         href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}
                       </a>
-                    {% endif %}
-                  {% endfor %}
-                  {% endif %}
-                </span>
-              </div>
-            </div>
-            <div id="collapse{{exp.id}}"
-                 class="panel-collapse collapse in">
-              <div class="accordion-inner">
-                <p><em>{{exp.description|default:""|bleach}}</em></p>
-                {% for ds in exp.datasets.all|dictsortreversed:"id"|slice:":1" %}
-                  {% if forloop.first %}
-                    <ul class="list-group">
-                      <li class="list-group-item dataset-list-header">Latest dataset in this experiment</li>
-                  {% endif %}
-                  <li class="list-group-item dataset-list-item">
-                      <a href="{% url 'tardis_portal.view_dataset' ds.id %}"><strong>{{ ds.description }}</strong></a>
-                  {% if exp.public_download_allowed %}
-                    {% for datafile in ds.get_images|slice:":5" %}
-                      {% if forloop.first %}
-                        <ul class="thumbnails list-inline">
-                      {% endif %}
-                      <li class="list-inline-item">
-                        <a class="thumbnail" href="{% url 'tardis.tardis_portal.download.view_datafile' datafile.id %}">{% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size=',50' rotation=0 quality='native' format='jpg' as thumbnail %}
-                        <img alt="Thumbnail for Datafile #{{datafile.id}}"
-                             src="{{ thumbnail }}"
-                             onerror="$(this).hide()"/></a>
-                      </li>
-                      {% if forloop.last %}
-                        </ul>
-                      {% endif %}
-                    {% endfor %}
-                    {% endif %}
-                  </li>
-                  {% if forloop.last %}
+                    </strong>
+                  </div>
+                  <div class="col">
+                    <ul class="list-inline float-right list-unstyled">
+                      <li class="list-inline-item m-0">{{ exp|experiment_last_updated_badge }}</li>
+                      <li class="list-inline-item m-0">{{ exp|experiment_datasets_badge }}</li>
+                      <li class="list-inline-item m-0">{{ exp|experiment_datafiles_badge }}</li>
+                      <li class="list-inline-item m-0">{{ exp|experiment_public_access_badge }}</li>
                     </ul>
-                  {% endif %}
-                  {% empty %}
-                  There are no datasets in this experiment
-                {% endfor %}
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-6">
+                    <small>
+                      {% for author in exp.experimentauthor_set.all %}
+                        {% if not forloop.first %}, {% endif %}
+                        <span property="dc:author">{{ author.author }}</span>
+                      {% endfor %}
+                        &nbsp;
+                    </small>
+                  </div>
+                  <div class="col">
+                    <span class="float-right">
+                      {% if exp.public_download_allowed %}
+                        {% for dltype, dlurl in exp.get_download_urls.items %}
+                          {% if forloop.first %}
+                            <a class="dllink" href="{{dlurl}}"
+                               title="Download Entire Experiment as {{dltype}}">
+                              <i class="fa fa-download"></i>
+                              <em>Download data as .{{dltype}}</em>
+                            </a>
+                          {% endif %}
+                        {% endfor %}
+                      {% endif %}
+                    </span>
+                  </div>
+                </div>
               </div>
+              <div id="collapse{{exp.id}}"
+                   class="panel-collapse collapse in">
+                <div class="accordion-inner">
+                  <p><em>{{exp.description|default:""|bleach}}</em></p>
+                  {% for ds in exp.datasets.all|dictsortreversed:"id"|slice:":1" %}
+                    {% if forloop.first %}
+                      <ul class="list-group">
+                        <li class="list-group-item dataset-list-header">Latest dataset in this experiment</li>
+                    {% endif %}
+                    <li class="list-group-item dataset-list-item">
+                        <a href="{% url 'tardis_portal.view_dataset' ds.id %}"><strong>{{ ds.description }}</strong></a>
+                    {% if exp.public_download_allowed %}
+                      {% for datafile in ds.get_images|slice:":5" %}
+                        {% if forloop.first %}
+                          <ul class="thumbnails list-inline">
+                        {% endif %}
+                        <li class="list-inline-item">
+                          <a class="thumbnail" href="{% url 'tardis.tardis_portal.download.view_datafile' datafile.id %}">{% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size=',50' rotation=0 quality='native' format='jpg' as thumbnail %}
+                          <img alt="Thumbnail for Datafile #{{datafile.id}}"
+                               src="{{ thumbnail }}"
+                               onerror="$(this).hide()"/></a>
+                        </li>
+                        {% if forloop.last %}
+                          </ul>
+                        {% endif %}
+                      {% endfor %}
+                      {% endif %}
+                    </li>
+                    {% if forloop.last %}
+                      </ul>
+                    {% endif %}
+                    {% empty %}
+                    There are no datasets in this experiment
+                  {% endfor %}
+                </div>
             </div>
           </div>
         {% endfor %}
       </div>
-      <br/>
     {% endif %}
     </div>
   </div>
-
 </div>
-{% render_bundle 'tardis_portal_public_data' %}
+<script type="text/javascript">
+$(function() {
+    $("#experiments .accordion-body").collapse({parent:"#experiments", toggle: true});
+    $(".explink").on("click", function(e) {
+        e.stopPropagation();
+    });
+    $(".dllink").on("click", function(e) {
+        e.stopPropagation();
+    });
+});
+</script>
 {% endblock %}
