--- a/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
@@ -12,17 +12,29 @@
 {% endif %}
 
 {% for exp in experiments %}
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <div id="toggle-{{exp.id}}" class="accordion-toggle" data-toggle="collapse">
-        <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-        <strong><a class="pull-left explink"
-                   href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-        {% experiment_badges exp %}
+  <div class="card border-0" style="background-color: #f5fbff">
+    <div class="card-header border-bottom-0" style="background-color: rgba(0,0,0,0)">
+      <div class="row">
+        <div id="toggle-{{exp.id}}" class="accordion-toggle col-8" data-toggle="collapse">
+          <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
+          <strong><a class="pull-left explink"
+                     href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
+        </div>
+        <div class="col">
+          {% experiment_badges exp %}
+        </div>
+      </div> {% comment %} class="row" {% endcomment %}
+      <div class="row">
+      <div class="col-6">
         {% experiment_authors exp %}
-        {% experiment_download_link exp %}
-      </div> {% comment %} class="accordion-toggle" {% endcomment %}
-    </div> {% comment %} class="accordion-heading" {% endcomment %}
+      </div>
+      <div class="col">
+        <span class="float-right">
+          {% experiment_download_link exp %}
+        </span>
+      </div>
+    </div>{% comment %} class="card-header" {% endcomment %}
+
     <div id="collapse-{{exp.id}}"
          class="panel-collapse collapse">
       <div class="accordion-inner">
