--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -48,7 +48,7 @@
   {% if not experiment.public %}
   <div class="pull-right">
     {% if push_to_enabled and is_authenticated %}
-    <a class="btn btn-xs btn-primary" title="Push to..."
+    <a class="btn btn-sm btn-primary" title="Push to..."
        onclick="window.open('{{ push_to_url }}', 'push-to', 'width=800, height=600'); return false;"
        href="{{ push_to_url }}" target="_blank">
       <i class="fa fa-upload"></i>
@@ -56,7 +56,7 @@
     </a>
     {% endif %}
     {% if has_write_permissions %}
-    <a class="btn btn-xs btn-warning" title="Edit Experiment"
+    <a class="btn btn-sm btn-warning" title="Edit Experiment"
        href="{{ experiment.get_edit_url }}">
       <i class="fa fa-pencil"></i>
       Edit Experiment
@@ -86,22 +86,25 @@
 
 <div class="row" >
   <div class="col-md-5">
-  <div align="center" style="margin-bottom: -20px">
-  <div id="abstractHolder" style="display: none">{{ experiment.description|bleach|linebreaksbr }}</div>
-  <a id="abstract-toggle" class="btn btn-default btn-xs" title="Show Description">
-     Toggle Full Description
-  </a>
-  </div>
-  <div style="padding-top:10px;">
-  <p class="abstract well info-box" property="dc:abstract">
-      <span id="abstractText">
-      </span>
-  </p>
+
+  <div class="card border-0">
+    <div class="card-body" style="padding: unset">
+      <div align="center" style="margin-bottom: -20px">
+        <div id="abstractHolder" style="display: none">{{ experiment.description|bleach|linebreaksbr }}</div>
+        <a id="abstract-toggle" class="btn btn-secondary btn-sm" title="Show Description">
+           Toggle Full Description
+        </a>
+      </div>
+      <p class="abstract card-text bg-light info-box" property="dc:abstract">
+        <span id="abstractText">
+        </span>
+      </p>
+    </div>
   </div>
     <!-- Tab buttons -->
-    <ul id="experiment-tabs" class="nav nav-pills">
+    <ul id="experiment-tabs" class="nav nav-pills" style="padding-top: 1.25rem">
       {% for appurl, appname in apps %}
-      <li><a data-toggle="tab" title="{{appname}}" data-url="{{ appurl }}">{{ appname }}</a></li>
+      <li class="nav-item"><a class="nav-link" data-toggle="tab" title="{{appname}}" data-url="{{ appurl }}">{{ appname }}</a></li>
       {% endfor %}
     </ul>
     <div class="tab-content">
