--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -6,7 +6,7 @@
 {% capture as action_bar %}
   {% if has_download_permissions or has_write_permissions %}
     {% if has_download_permissions %}
-      <button type="submit" class="btn btn-secondary btn-sm download-selected">
+      <button type="submit" class="btn btn-outline-secondary btn-sm download-selected">
         <i class="fa fa-download"></i>
         Download Selected
       </button>
@@ -23,7 +23,7 @@
 
   {% if has_write_permissions and not experiment.is_publication %}
   <a id="add-dataset"
-     class="add-dataset btn btn-secondary btn-xm pull-right"
+     class="add-dataset btn btn-outline-secondary btn-sm pull-right"
      href="{% url 'tardis.tardis_portal.views.add_dataset' experiment.id %}">
     <i class="fa fa-plus"></i>
     Add New
