BS4 changes to sharing tab on experiment view page

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group_readonly.html
@@ -19,13 +19,13 @@
                       </td>
                       <td>
                           {% if group_acl.canRead %}
-                          <span class="label label-success">Read</span>
+                          <span class="badge badge-success">Read</span>
                           {% endif %}
                           {% if group_acl.canWrite %}
-                          <span class="label label-success">Edit</span>
+                          <span class="badge badge-success">Edit</span>
                           {% endif %}
                           {% if group_acl.isOwner %}
-                          <span class="label label-info">Owner</span>
+                          <span class="badge badge-info">Owner</span>
                           {% endif %}
                       </td>
                   </tr>
