--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
@@ -28,13 +28,13 @@
                     </td>
                     <td>
                           {% if user_acl.canRead %}
-                          <span class="label label-success">Read</span>
+                          <span class="badge badge-success">Read</span>
                           {% endif %}
                           {% if user_acl.canWrite %}
-                          <span class="label label-success">Edit</span>
+                          <span class="badge badge-success">Edit</span>
                           {% endif %}
                           {% if user_acl.isOwner %}
-                          <span class="label label-info">Owner</span>
+                          <span class="badge badge-info">Owner</span>
                           {% endif %}
                     </td>
                 </tr>
