--- a/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/choose_rights.html
@@ -22,7 +22,7 @@
   <div id="license-options"></div>
 <div id="selected-license-text"></div>
 <div id="legal-section">
-  <a id="reselect-license">Reselect License</a>
+  <button class="btn-secondary" id="reselect-license">Reselect License</button>
   <br/><br/>
 <h3 >Step 3: Accept The Legal Agreement:</h3>
   <pre id="publishing-legal-text"
