--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -29,10 +29,11 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="title">Add Parameters</h1>
-        <a class="close" data-dismiss="modal">&times;</a>
+        <h1 class="modal-title">Add Parameters</h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-
       <div class="loading-placeholder" style="display: none">
         <p>Please wait... <img src="{% static 'images/ajax-loader.gif'%}" alt="loading" /></p>
       </div>
