--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -35,8 +35,10 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
         <h1 class="title"></h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -53,8 +55,10 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
         <h1 class="title">Request sent</h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -78,8 +82,10 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
         <h1 class="title">Import Files</h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -93,9 +99,9 @@
 
 <div class="page-header">
   <h4>Dataset</h4>
-    <div class="pull-right">
+    <div class="float-right">
   {% if push_to_enabled and is_authenticated %}
-    <a class="btn btn-xs btn-primary" title="Push to..."
+    <a class="btn btn-sm btn-primary" title="Push to..."
        onclick="window.open('{{ push_to_url }}', 'push-to', 'width=800, height=600'); return false;"
        href="{{ push_to_url }}" target="_blank">
       <i class="fa fa-upload"></i>
@@ -103,7 +109,7 @@
     </a>
   {% endif %}
   {% if has_write_permissions and is_authenticated %}
-    <a class="btn btn-warning btn-xs" title="Edit Dataset"
+    <a class="btn btn-warning btn-sm" title="Edit Dataset"
        href="{{ dataset.get_edit_url }}">
       <i class="fa fa-pencil"></i>
       Edit Dataset
@@ -169,7 +175,7 @@
   </h4>
   {% endif %}
 
-    <p class="pull-right">
+    <p class="float-right">
     {{ dataset|dataset_experiments_badge}}&nbsp;
     {{ dataset|dataset_datafiles_badge }}&nbsp;
     {{ dataset|dataset_size_badge }}
@@ -274,7 +280,7 @@
     <div class="col-md-4">
 {% if has_write_permissions and perms.tardis_portal.add_datafile and not experiment.public and not immutable %}
     <span class="btn btn-sm btn-success fileinput-button pull-right">
-        <i class="glyphicon glyphicon-plus"></i>
+        <i class="fa fa-plus"></i>
         <span>Add files...</span>
         <input id="fileupload" type="file" name="attached_file"
                data-url="/api/v1/dataset_file/" multiple>
@@ -290,7 +296,7 @@
                     {% if organization|length > 1 %}
                         {% for p in protocol %}
                             {% for o in organization %}
-                                <a class="btn btn-primary btn-xs" href="{{p.1}}{{o}}"
+                                <a class="btn btn-primary btn-sm" href="{{p.1}}{{o}}"
                                    title="Download Entire Experiment as {{p.0|upper}} with {{o}} organization">
                                     <i class="fa fa-download"></i>
                                     {% if o == default_organization %}
@@ -303,7 +309,7 @@
                         {% endfor %}
                     {% else %}
                         {% for p in protocol %}
-                            <a class="btn btn-primary btn-xs" href="{{p.1}}"
+                            <a class="btn btn-primary btn-sm" href="{{p.1}}"
                                title="Download Entire Dataset as {{p.0|upper}}">
                                 <i class="fa fa-download"></i>
                                 {{p.0|upper}}
@@ -312,8 +318,8 @@
                     {% endif %}
                     <a target="_blank"
                        href="{% url "tardis.apps.sftp:index" %}?object_id={{ dataset.id }}&object_type=dataset"
-                       class="btn btn-primary btn-xs" title="Download with SFTP">SFTP</a>
-                    <a class="btn btn-primary btn-xs"
+                       class="btn btn-primary btn-sm" title="Download with SFTP">SFTP</a>
+                    <a class="btn btn-primary btn-sm"
                        href="{% url 'tardis_portal.dataset_checksums' dataset.id %}"
                        title="Download MD5 checksums for all files in this Dataset">MD5</a>
                 </p>
