BS4 changes related to dataset view page

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
@@ -4,7 +4,7 @@
 <div class="pull-right">
   <a title="Add"
      href="{% url 'tardis.tardis_portal.views.add_dataset_par' dataset.id %}"
-     class="add-metadata btn btn-secondary btn-sm"
+     class="add-metadata btn btn-outline-secondary btn-sm"
      style="margin-right: 20px">
     <i class="fa fa-plus"></i>
     Add Dataset Metadata
