--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -59,7 +59,7 @@
                 <td colspan="3">
                     Select: <a class="dataset_selector_all btn btn-default btn-xs">All</a> / <a class="dataset_selector_none btn btn-default btn-xs">None</a>
                     <div class="pull-right">
-                        <button type="submit" class="btn btn-default btn-xs download-selected">
+                        <button type="submit" class="btn btn-outline-secondary btn-sm download-selected">
                             <i class="fa fa-download"></i>
                             Download Selected Files
                         </button>
@@ -128,7 +128,7 @@
                 <td style="width: 130px;">
                     <div class="btn-group pull-right">
                         {% if has_download_permissions and datafile.verified %}
-                            <a class="btn btn-default btn-sm {% if datafile.is_online %}" title="Download"
+                            <a class="btn btn-outline-secondary btn-sm {% if datafile.is_online %}" title="Download"
                                {% else %} archived-file disabled"{% endif %}
                                href="{{ datafile.get_download_url }}">
                                 <i class="fa fa-download fa-lg"></i>
@@ -137,13 +137,13 @@
                         {% if has_write_permissions and not immutable %}
                             <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
                                data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
-                               class="btn btn-default btn-sm add-metadata">
+                               class="btn btn-outline-secondary btn-sm add-metadata">
                                 <i class="fa fa-plus fa-lg"></i>
                             </a>
                         {% endif %}
 
                         <a id="datafile_metadata_toggle_{{datafile.id}}" title="Show/Hide Metadata"
-                           class="btn btn-default btn-sm datafile-info-toggle metadata_hidden" href="/ajax/datafile_details/{{datafile.id}}/">
+                           class="btn btn-default btn-outline-secondary datafile-info-toggle metadata_hidden" href="/ajax/datafile_details/{{datafile.id}}/">
                             <i class="fa fa-list fa-lg"></i>
                         </a>
                     </div>
