--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
@@ -14,7 +14,7 @@
 
     <div class="btn-group pull-right">
       {% if has_download_permissions and datafile.is_online %}
-      <a  class="btn btn-default"
+      <a  class="btn btn-outline-secondary"
           href="{{ datafile.get_download_url }}"
           title="Download">
           <i class="fa fa-download fa-lg"></i>
@@ -23,7 +23,7 @@
       {% if has_write_permissions and not immutable %}
       <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
        data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
-       class="btn btn-default add-metadata">
+       class="btn btn-outline-secondary add-metadata">
           <i class="fa fa-plus"></i>
        </a>
        {% endif %}
