align dropdown menu to right

--- a/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
+++ b/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
@@ -26,7 +26,7 @@
            data-toggle="dropdown">Facility: {{facilityCtrl.selectedFacilityName}}
           <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-right">
             <li style="text-align:center"><strong>Select a
                 facility</strong></li>
             <li class="dropdown-item" ng-repeat="facility in facilityCtrl.facilities">
